@@ -1,3 +1,10 @@
+2007-10-18  Zeeshan Ali  <zeenix@gstreamer.net>
+
+	* data/gupnp-av-cp.glade:
+	* src/av-cp/av-cp-playlisttreeview.c:
+
+	Playlist should be a tree rather than a list.
+
 2007-10-17  Zeeshan Ali  <zeenix@gstreamer.net>
 
 	* src/av-cp/media-server-proxy.c:
